--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@mui/material": "^5.1.0",
+    "@material-ui/core": "^4.12.3",
+    "install": "^0.13.0",
     "next": "12.0.3",
+    "npm": "^8.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
