--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.1",
     "next": "12.0.3",
     "npm": "^8.1.3",
     "react": "17.0.2",
