--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.12.3",
     "install": "^0.13.0",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.0.12",
     "next": "12.0.3",
     "npm": "^8.1.3",
     "react": "17.0.2",
