--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
     "install": "^0.13.0",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "next": "12.0.3",
     "next-connect": "^0.11.0",
