--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-connect": "^0.11.0",
     "npm": "^8.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.20.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
