--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "@googlemaps/js-api-loader": "^1.12.10",
+    "@googlemaps/react-wrapper": "^1.1.15",
     "@material-ui/core": "^4.12.3",
     "@paypal/react-paypal-js": "^7.4.2",
     "axios": "^0.24.0",
