--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/styled": "^11.6.0",
     "@googlemaps/js-api-loader": "^1.12.10",
     "@googlemaps/react-wrapper": "^1.1.15",
-    "@material-ui/core": "^4.12.3",
+    "@mui/core": "^5.0.0-alpha.54",
     "@paypal/react-paypal-js": "^7.4.2",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
