--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.6.0",
+    "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@googlemaps/js-api-loader": "^1.12.10",
     "@googlemaps/react-wrapper": "^1.1.15",
     "@mui/core": "^5.0.0-alpha.54",
+    "@mui/material": "^5.2.7",
     "@paypal/react-paypal-js": "^7.4.2",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
