--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.6.0",
     "@googlemaps/js-api-loader": "^1.12.10",
     "@googlemaps/react-wrapper": "^1.1.15",
+    "@material-ui/core": "^4.12.3",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/material": "^5.2.7",
     "@paypal/react-paypal-js": "^7.4.2",
