--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "npm": "^8.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.20.2"
+    "react-hook-form": "^7.20.2",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
