--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.6.0",
     "@googlemaps/js-api-loader": "^1.12.10",
     "@googlemaps/react-wrapper": "^1.1.15",
+    "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.12.3",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/material": "^5.2.7",
@@ -29,7 +30,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.20.2",
-    "swr": "^1.2.2"
+    "swr": "^1.2.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "7.32.0",
