--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.0.12",
     "next": "12.0.4",
     "next-connect": "^0.11.0",
+    "next-transpile-modules": "^9.0.0",
     "notistack": "^2.0.3",
     "npm": "^8.1.3",
     "react": "17.0.2",
